# CrewAI-Travel-Planner_Farhan

./: .env.example  .gitignore  Analysis.md  README.md  pyproject.toml  run.sh
src/travel_planner/: __init__.py  crew.py  logger.py  main.py
src/travel_planner/config/: agents.yaml  tasks.yaml
src/travel_planner/tools/: calculator_tool.py  serper_tool.py
